globus-dsi-rest (0.26-1+gt6.@distro@) @distro@; urgency=low

  * Don't send an empty buffer at end of file in read_gridft_op

 -- Globus Toolkit <support@globus.org>  Fri, 17 Jan 2017 16:27:42 -0400

globus-dsi-rest (0.25-1+gt6.@distro@) @distro@; urgency=low

  * Use gridftp server recommended number of outstanding buffers
  * Fix format of json log messsage
  * Don't run gridftp server fork tests as root

 -- Globus Toolkit <support@globus.org>  Mon, 13 Jan 2017 13:05:40 -0400

globus-dsi-rest (0.23-1+gt6.@distro@) @distro@; urgency=low

  * Allow NULL key or value in URI parameters

 -- Globus Toolkit <support@globus.org>  Wed, 11 Jan 2017 15:31:33 -0500

globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low

  * Ensure printable log level string is not null.
  * Leak in read_json
  * Prefer timeout error over libcurl aborted by callback error

 -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 15:50:55 -0500

globus-dsi-rest (0.21-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Add curl cookie/ssl/dns resource sharing between handles

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2016 13:03:46 -0500

globus-dsi-rest (0.18-1+gt6.@distro@) @distro@; urgency=low

  * Improve diagnostics

 -- Globus Toolkit <support@globus.org>  Thu, 03 Nov 2016 09:03:47 -0400

globus-dsi-rest (0.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix some logging issues

 -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 11:26:29 -0400

globus-dsi-rest (0.16-1+gt6.@distro@) @distro@; urgency=low

  * Add eof flag to gridftp_op_arg to pass back EOF state to requester